--- a/tmux/conf/tmux.opts.conf
+++ b/tmux/conf/tmux.opts.conf
@@ -1,4 +1,3 @@
-# utf8 is on
 setw -q -g utf8 on
 
 set -g default-terminal "tmux-256color"
@@ -13,3 +12,5 @@ set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on
 setw -g mode-keys vi
+
+set -g @continuum-restore 'on'
