--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -12,23 +12,21 @@ bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind -n M-. switch-client -n
 bind a run-shell "edit-tmux-output"
 
-bind C-s display-popup -E "\
-    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
-    sed '/^$/d' |\
-    fzf --border=none --reverse |\
-    xargs tmux switch-client -t"
-bind C-a display-popup -E "/home/alexanek/.dotfiles/scripts/tsessionizer.sh"
-
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
-bind -n M-Left  previous-window
-bind -n M-Right next-window
+bind -n M-Down  previous-window
+bind -n M-Up next-window
 
 # Select Windows
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
 bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
 
 bind n new-window
 ################# PANE MANAGEMENT #################
