--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 #################################### OPTIONS ###################################
-tmux_dir="~/.config/tmux"
+tmux_dir="~/dotfiles/tmux"
 tmux_conf_dir="$tmux_dir/conf"
 tmux_plugins_dir="$tmux_dir/plugins"
 
