--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -18,10 +18,11 @@ after-login-command = []
 # You can use it to add commands that run after AeroSpace startup.
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
-after-startup-command = []
+after-startup-command = ['exec-and-forget ./startup.sh']
 
 # Start AeroSpace at login
 start-at-login = true
+
 
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
 enable-normalization-flatten-containers = true
@@ -75,6 +76,17 @@ automatically-unhide-macos-hidden-apps = true
     outer.bottom =     0
     outer.top =        0
     outer.right =      0
+
+# Monitor sequence number from left to right. 1-based indexing
+# You can specify multiple patterns.
+# The first matching pattern will be used
+[workspace-to-monitor-force-assignment]
+    1 = 'secondary main'
+    2 = 'main'
+    3 = 'built-in, main'
+    4 = 'main'
+    5 = 'main'
+    6 = 'main'
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -167,29 +179,14 @@ automatically-unhide-macos-hidden-apps = true
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
     alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-    alt-shift-semicolon = 'mode service'
 
     # Goodies: https://nikitabobko.github.io/AeroSpace/goodies
-    alt-ctrl-r = 'reload-config'
+    alt-r = 'reload-config'
 
+# See: https://nikitabobko.github.io/AeroSpace/commands#mode
+# alt-shift-comma = 'mode service'
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
 [mode.service.binding]
     esc = ['reload-config', 'mode main']
     r = ['flatten-workspace-tree', 'mode main'] # reset layout
-    f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
-    backspace = ['close-all-windows-but-current', 'mode main']
-
-    # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
-    #s = ['layout sticky tiling', 'mode main']
-
-    alt-shift-h = ['join-with left', 'mode main']
-    alt-shift-j = ['join-with down', 'mode main']
-    alt-shift-k = ['join-with up', 'mode main']
-    alt-shift-l = ['join-with right', 'mode main']
-
-    down = 'volume down'
-    up = 'volume up'
-    shift-down = ['volume set 0', 'mode main']
-
