--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -149,6 +149,12 @@ automatically-unhide-macos-hidden-apps = true
     alt-keypad4 = 'workspace 4'
     alt-keypad5 = 'workspace 5'
     alt-keypad6 = 'workspace 6'
+    alt-1 = 'workspace 1'
+    alt-2 = 'workspace 2'
+    alt-3 = 'workspace 3'
+    alt-4 = 'workspace 4'
+    alt-5 = 'workspace 5'
+    alt-6 = 'workspace 6'
     # alt-keypad7 = 'workspace 7'
     # alt-keypad8 = 'workspace 8'
     # alt-keypad9 = 'workspace 9'
@@ -165,6 +171,12 @@ automatically-unhide-macos-hidden-apps = true
     alt-ctrl-keypad4 = 'move-node-to-workspace 4'
     alt-ctrl-keypad5 = 'move-node-to-workspace 5'
     alt-ctrl-keypad6 = 'move-node-to-workspace 6'
+    alt-ctrl-1 = 'move-node-to-workspace 1'
+    alt-ctrl-2 = 'move-node-to-workspace 2'
+    alt-ctrl-3 = 'move-node-to-workspace 3'
+    alt-ctrl-4 = 'move-node-to-workspace 4'
+    alt-ctrl-5 = 'move-node-to-workspace 5'
+    alt-ctrl-6 = 'move-node-to-workspace 6'
 
     # Move Chrome to iterm workspace
     alt-ctrl-o = 'exec-and-forget $HOME/.config/aerospace/chrome-workspace.sh'
