Improved path handling in aerospace.toml

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -19,7 +19,7 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-    'exec-and-forget /Users/tobias/dotfiles/aerospace/startup.sh'
+    'exec-and-forget ${HOME}/dotfiles/aerospace/startup.sh'
 ]
 
 # Start AeroSpace at login
