--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -122,7 +122,7 @@ automatically-unhide-macos-hidden-apps = true
     # '''
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-    alt-slash = 'layout tiles horizontal vertical'
+    alt-i = 'layout tiles horizontal vertical'
     # alt-comma = 'layout accordion horizontal vertical'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
