--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -5,8 +5,9 @@ set -g prefix ^F
 set -g xterm-keys on
 
 bind R source-file "$tmux_dir/tmux.conf"
-bind * list-clients
+bind * list-sessions
 bind w list-windows
+bind L display-popup -E -b none "$DOTFILES/scripts/sessionizer.sh 2> /tmp/sessionizer.log"
 
 bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind -n M-. switch-client -n
