--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -7,26 +7,14 @@ set -g xterm-keys on
 bind R source-file "$tmux_dir/tmux.conf"
 bind * list-sessions
 bind w list-windows
+bind o switch-client -l
+bind d kill-session
 bind L display-popup -E -b none "$DOTFILES/scripts/sessionizer.sh 2> /tmp/sessionizer.log"
-
-bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
-bind -n M-. switch-client -n
 
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
 bind -n M-Down  previous-window
 bind -n M-Up next-window
-
-# Select Windows not working
-# bind -n M-1 select-window -t 1
-# bind -n M-2 select-window -t 2
-# bind -n M-3 select-window -t 3
-# bind -n M-4 select-window -t 4
-# bind -n M-5 select-window -t 5
-# bind -n M-6 select-window -t 6
-# bind -n M-7 select-window -t 7
-# bind -n M-8 select-window -t 8
-# bind -n M-9 select-window -t 9
 
 bind n new-window
 ################# PANE MANAGEMENT #################
