--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,7 @@ tmux_plugins_dir="$tmux_dir/plugins"
 source "$tmux_conf_dir/tmux.opts.conf"
 source "$tmux_conf_dir/tmux.keybind.conf"
 source "$tmux_conf_dir/tmux.skin.conf"
+source "$tmux_conf_dir/tmux.copy.conf"
 
 #################################### PLUGINS ###################################
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
