Added sessionizer support to show only active sessions

--- a/tmux/conf/tmux.keybind.conf
+++ b/tmux/conf/tmux.keybind.conf
@@ -10,6 +10,7 @@ bind w list-windows
 bind o switch-client -l
 bind d kill-session
 bind L display-popup -E -b none "$DOTFILES/scripts/sessionizer.sh 2> /tmp/sessionizer.log"
+bind S display-popup -E -b none "$DOTFILES/scripts/sessionizer.sh existing 2> /tmp/sessionizer.log"
 
 ################# WINDOW MANAGEMENT #################
 bind r command-prompt "rename-window %%"
