--- a/tmux/conf/tmux.copy.conf
+++ b/tmux/conf/tmux.copy.conf
@@ -1,6 +1,6 @@
 ########################## COPY MODE ##########################
-# Enter copy mode with prefix+[
-bind ] copy-mode
+# Enter copy mode with prefix+k
+bind k copy-mode
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
