More ghostty configs

--- a/ghostty/config
+++ b/ghostty/config
@@ -15,34 +15,14 @@
 # Additionally, each config option is also explained in detail
 # on Ghostty's website, at https://ghostty.org/docs/config.
 
-# Config syntax crash course
-# ==========================
-# # The config file consists of simple key-value pairs,
-# # separated by equals signs.
-# font-family = Iosevka
-# window-padding-x = 2
-#
-# # Spacing around the equals sign does not matter.
-# # All of these are identical:
-# key=value
-# key= value
-# key =value
-# key = value
-#
-# # Any line beginning with a # is a comment. It's not possible to put
-# # a comment after a config option, since it would be interpreted as a
-# # part of the value. For example, this will have a value of "#123abc":
-# background = #123abc
-#
-# # Empty values are used to reset config keys to default.
-# key =
-#
-# # Some config options have unique syntaxes for their value,
-# # which is explained in the docs for that config option.
-# # Just for example:
-# resize-overlay-duration = 4s 200ms
-background-opacity = 0.9
-# macOS: To hide the titlebar without removing the native window borders
-#        or rounded corners, use `macos-titlebar-style = hidden` instead.
-# window-decoration=none
+background-opacity = 0.8
 macos-titlebar-style = hidden
+
+font-family = FiraCode Nerd Font Mono
+font-size = 16
+window-save-state = always
+confirm-close-surface = false
+
+# Probably disable copy-on-select
+copy-on-select = true
+theme = catppuccin-mocha
