--- a/ghostty/config
+++ b/ghostty/config
@@ -24,5 +24,6 @@ window-save-state = always
 confirm-close-surface = false
 
 # Probably disable copy-on-select
-copy-on-select = true
+copy-on-select = clipboard
+
 theme = catppuccin-mocha
