--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -85,6 +85,7 @@ automatically-unhide-macos-hidden-apps = true
     4 = 'main'
     5 = 'main'
     6 = 'main'
+    7 = 'main'
     p = 'main'
     m = 'main'
     g = 'main'
@@ -96,6 +97,10 @@ automatically-unhide-macos-hidden-apps = true
 [[on-window-detected]]
 if.app-id = 'com.microsoft.teams2'
 run = 'move-node-to-workspace 6'
+
+[[on-window-detected]]
+if.app-id = 'com.atlassian.trello'
+run = 'move-node-to-workspace 7'
 
 [[on-window-detected]]
 if.app-id = 'com.google.Chrome'
@@ -203,6 +208,7 @@ run = 'move-node-to-workspace g'
     alt-keypad4 = 'workspace 4'
     alt-keypad5 = 'workspace 5'
     alt-keypad6 = 'workspace 6'
+    alt-keypad7 = 'workspace 7'
     alt-p = 'workspace p'
     alt-m = 'workspace m'
     alt-g = 'workspace g'
@@ -213,6 +219,7 @@ run = 'move-node-to-workspace g'
     ctrl-4 = 'workspace 4'
     ctrl-5 = 'workspace 5'
     ctrl-6 = 'workspace 6'
+    ctrl-7 = 'workspace 7'
     ctrl-p = 'workspace p'
     ctrl-m = 'workspace m'
     ctrl-g = 'workspace g'
@@ -228,12 +235,14 @@ run = 'move-node-to-workspace g'
     alt-ctrl-keypad4 = 'move-node-to-workspace 4'
     alt-ctrl-keypad5 = 'move-node-to-workspace 5'
     alt-ctrl-keypad6 = 'move-node-to-workspace 6'
+    alt-ctrl-keypad7 = 'move-node-to-workspace 7'
     alt-ctrl-1 = 'move-node-to-workspace 1'
     alt-ctrl-2 = 'move-node-to-workspace 2'
     alt-ctrl-3 = 'move-node-to-workspace 3'
     alt-ctrl-4 = 'move-node-to-workspace 4'
     alt-ctrl-5 = 'move-node-to-workspace 5'
     alt-ctrl-6 = 'move-node-to-workspace 6'
+    alt-ctrl-7 = 'move-node-to-workspace 7'
     alt-ctrl-p = 'move-node-to-workspace p '
     alt-ctrl-m = 'move-node-to-workspace m'
     alt-ctrl-g = 'move-node-to-workspace g'
