--- a/tmux/conf/tmux.opts.conf
+++ b/tmux/conf/tmux.opts.conf
@@ -12,7 +12,9 @@ set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on
 setw -g mode-keys vi
-set -g @compile-mode-open-file-key "o"
+
+set -g @compile-mode-open-file-key 'o'
+set -g @compile-mode-session-history 'on'
 
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
