--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,7 @@ source "$tmux_conf_dir/tmux.keybind.conf"
 source "$tmux_conf_dir/tmux.skin.conf"
 source "$tmux_conf_dir/tmux.copy.conf"
 
-#################################### PLUGINS ###################################
+#################################### PLUGINS ##################################
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
 
 set -g @plugin 'tmux-plugins/tpm'
